--- a/_notebooks/2020-02-20-test.ipynb
+++ b/_notebooks/2020-02-20-test.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Fastpages Notebook Blog Post\n",
-    "> A tutorial of fastpages for Jupyter notebooks.\n",
+    "# Python First Blog Post\n",
+    "> Shows python code in a notebook.\n",
     "\n",
     "- toc: true \n",
     "- badges: true\n",
@@ -71,14 +71,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The comment #hide_input was used to hide the code that produced this.\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.8.10 64-bit' requires ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: '/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
      ]
     }
    ],
@@ -796,9 +799,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "visualization-curriculum-gF8wUgMm",
+   "display_name": "Python 3.8.10 64-bit",
    "language": "python",
-   "name": "visualization-curriculum-gf8wugmm"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -810,7 +813,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.8.10"
   },
   "varInspector": {
    "cols": {
@@ -840,6 +843,11 @@
     "_Feature"
    ],
    "window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+   }
   }
  },
  "nbformat": 4,
