--- a/_notebooks/2020-02-20-test.ipynb
+++ b/_notebooks/2020-02-20-test.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Python First Blog Post\n",
-    "> Shows python code in a notebook.\n",
+    "# Fastpages Notebook Blog Post\n",
+    "> A tutorial of fastpages for Jupyter notebooks.\n",
     "\n",
     "- toc: true \n",
     "- badges: true\n",
