--- a/_notebooks/python_nb.ipynb
+++ b/_notebooks/python_nb.ipynb
@@ -4,13 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "toc: true\n",
-    "layout: post\n",
-    "description: Demonstration of python code\n",
-    "categories: [markdown]\n",
-    "title: Python Notebook\n",
-    "---"
+    "# Python Notebook\n",
+    "> A demonstration of python code\n",
+    "\n",
+    "- toc: true \n",
+    "- badges: true\n",
+    "- comments: true\n",
+    "- categories: [jupyter]\n",
+    "- image: images/chart-preview.png"
    ]
   },
   {
