--- a/_notebooks/python_nb.ipynb
+++ b/_notebooks/python_nb.ipynb
@@ -11,7 +11,7 @@
     "- badges: true\n",
     "- comments: true\n",
     "- categories: [jupyter]\n",
-    "- image: python_icon.png"
+    "- image: images/python_icon.png"
    ]
   },
   {
