--- a/_notebooks/java_nb.ipynb
+++ b/_notebooks/java_nb.ipynb
@@ -11,7 +11,7 @@
     "- badges: true\n",
     "- comments: true\n",
     "- categories: [jupyter]\n",
-    "- image: java_image.png"
+    "- image: images/java_image.png"
    ]
   },
   {
