--- a/_notebooks/java_nb.ipynb
+++ b/_notebooks/java_nb.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
@@ -27,12 +27,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello World\n"
+      "Hello Java world!\n"
      ]
     }
    ],
    "source": [
-    "print(\"Hello World\")"
+    "print(\"Hello Java world!\")\n"
    ]
   }
  ],
