--- a/_notebooks/bash_checks.ipynb
+++ b/_notebooks/bash_checks.ipynb
@@ -4,40 +4,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Python Notebook\n",
-    "> A demonstration of python code\n",
+    "# Bash Check\n",
+    "> Proof of installations\n",
     "\n",
     "- toc: true \n",
     "- badges: true\n",
     "- comments: true\n",
     "- categories: [jupyter]\n",
-    "- image: images/python_icon.png"
+    "\n",
+    "## Python Check"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello World\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe kernel failed to start as a dll could not be loaded.\n",
+      "Click <a href='https://aka.ms/kernelFailuresDllLoad'>here</a> for more info."
      ]
     }
    ],
    "source": [
-    "message = \"Hello World\"\n",
-    "print(message)"
+    "python --version"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit (windows store)",
-   "language": "python",
-   "name": "python3"
+   "display_name": "Bash",
+   "language": "bash",
+   "name": "bash"
   },
   "language_info": {
    "codemirror_mode": {
@@ -46,15 +52,15 @@
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "python",
+   "name": "bash",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "017267f0b1848ac6dec01a777c506dc83f137ec51c9b98b52cfac4238ca8a577"
+    "hash": "3580184b020661fc9479b01237039c68aa9914687cbad07e8d65d9596016fd77"
    }
   }
  },
