--- a/_notebooks/notes.ipynb
+++ b/_notebooks/notes.ipynb
@@ -11,8 +11,10 @@
     "- badges: true\n",
     "- comments: true\n",
     "- categories: [jupyter]\n",
+    "\n",
     "## Unit 1: Primitives\n",
-    "Primitives are datatypes that are built into java. The different datatypes are int, float, long, double, boolean, char, byte, and short. When it is lower case, it is primitive and when it is uppercase, it is part of a wrapper class.\n"
+    "\n",
+    "#### Primitives are datatypes that are built into java. The different datatypes are int, float, long, double, boolean, char, byte, and short. When it is lower case, it is primitive and when it is uppercase, it is part of a wrapper class.\n"
    ]
   }
  ],
