--- a/_notebooks/bash_checks.ipynb
+++ b/_notebooks/bash_checks.ipynb
@@ -23,19 +23,9 @@
      "languageId": "shellscript"
     }
    },
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe kernel failed to start as a dll could not be loaded.\n",
-      "Click <a href='https://aka.ms/kernelFailuresDllLoad'>here</a> for more info."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "python --version"
+    "python --version\n"
    ]
   }
  ],
