--- a/_notebooks/java_primitives.ipynb
+++ b/_notebooks/java_primitives.ipynb
@@ -15,47 +15,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (4035055128.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Input \u001b[1;32mIn [4]\u001b[1;36m\u001b[0m\n\u001b[1;33m    float a = 123.04\u001b[0m\n\u001b[1;37m          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The integer is 10 and the boolean isfalse\n"
      ]
     }
    ],
    "source": [
-    "float a = 123.04\n",
-    "int b = 10\n",
-    "boolean c = false\n"
+    "int b = 10;\n",
+    "boolean c = false;\n",
+    "System.out.println(\"The integer is \" + b + \" and the boolean is \" + c)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit (windows store)",
-   "language": "python",
-   "name": "python3"
+   "display_name": "Java",
+   "language": "java",
+   "name": "java"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "codemirror_mode": "java",
+   "file_extension": ".jshell",
+   "mimetype": "text/x-java-source",
+   "name": "Java",
+   "pygments_lexer": "java",
+   "version": "11.0.16+8-post-Ubuntu-0ubuntu120.04"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "017267f0b1848ac6dec01a777c506dc83f137ec51c9b98b52cfac4238ca8a577"
+    "hash": "3580184b020661fc9479b01237039c68aa9914687cbad07e8d65d9596016fd77"
    }
   }
  },
