--- a/_notebooks/java_nb.ipynb
+++ b/_notebooks/java_nb.ipynb
@@ -16,10 +16,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
-     "languageId": "javascript"
+     "languageId": "java"
     }
    },
    "outputs": [
@@ -32,27 +32,23 @@
     }
    ],
    "source": [
-    "print(\"Hello Java world!\")\n"
+    "System.out.println(\"Hello Java world!\")\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit (windows store)",
-   "language": "python",
-   "name": "python3"
+   "display_name": "Java",
+   "language": "java",
+   "name": "java"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "codemirror_mode": "java",
+   "file_extension": ".jshell",
+   "mimetype": "text/x-java-source",
+   "name": "Java",
+   "pygments_lexer": "java",
+   "version": "11.0.16+8-post-Ubuntu-0ubuntu120.04"
   },
   "orig_nbformat": 4,
   "vscode": {
