--- a/_notebooks/java_objects.ipynb
+++ b/_notebooks/java_objects.ipynb
@@ -4,13 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Java Objects demonstation\n",
+    "# Java Objects demonstration\n",
     "> Proof of understanding of objects\n",
     "\n",
     "- toc: true \n",
     "- badges: true\n",
     "- comments: true\n",
-    "- categories: [jupyter]"
+    "- categories: [jupyter]\n",
+    "\n",
+    "The code creates a public class called \"Student\", which takes in three different instance variables: class, teacher, and period. With these a string of \"AP Computer Science A\", another string of \"Mr. Mortensen\", and an integer of 2 are put together to print out the statement, \"I have AP Computer Science A for Mr. Mortensen in period 2\""
    ]
   },
   {
@@ -37,7 +39,7 @@
     "    public static void main(String[] args) {\n",
     "        Student s = new Student(\"AP Computer Science A\", \"Mr. Mortensen\", 2);\n",
     "        \n",
-    "        system.out.println(\"I have \" + s.teacher \" for \" + s.class + \" in \" + s.period);\n",
+    "        system.out.println(\"I have \" + s.teacher \" for \" + s.class + \" in period \" + s.period);\n",
     "    }\n",
     "}"
    ]
