--- a/_notebooks/code_org.ipynb
+++ b/_notebooks/code_org.ipynb
@@ -10,8 +10,13 @@
     "- toc: true \n",
     "- badges: true\n",
     "- comments: true\n",
-    "- categories: [jupyter]\n",
-    "\n",
+    "- categories: [jupyter]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Proof of completion\n",
     "![Code.org](code.org2_pic.png)\n",
     "\n",
