--- a/_notebooks/java_objects.ipynb
+++ b/_notebooks/java_objects.ipynb
@@ -10,8 +10,13 @@
     "- toc: true \n",
     "- badges: true\n",
     "- comments: true\n",
-    "- categories: [jupyter]\n",
-    "\n",
+    "- categories: [jupyter]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The code creates a public class called \"Student\", which takes in three different instance variables: class, teacher, and period. With these a string of \"AP Computer Science A\", another string of \"Mr. Mortensen\", and an integer of 2 are put together to print out the statement, \"I have AP Computer Science A for Mr. Mortensen in period 2\""
    ]
   },
