--- a/_notebooks/code_org.ipynb
+++ b/_notebooks/code_org.ipynb
@@ -18,8 +18,13 @@
    "metadata": {},
    "source": [
     "## Proof of completion\n",
-    "![Code.org](code.org2_pic.png)\n",
-    "\n",
+    "![Code.org](code.org2_pic.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Classes and Objects\n",
     "\n",
     "<mark >Classes</mark> are a way to create and store objects and their data types and methods. They contain data, such as variables and actions, such as methods.\n",
