--- a/_notebooks/java_objects.ipynb
+++ b/_notebooks/java_objects.ipynb
@@ -17,6 +17,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Objects\n",
     "The code creates a public class called \"Student\", which takes in three different instance variables: class, teacher, and period. With these a string of \"AP Computer Science A\", another string of \"Mr. Mortensen\", and an integer of 2 are put together to print out the statement, \"I have AP Computer Science A for Mr. Mortensen in period 2\""
    ]
   },
