--- a/_notebooks/java_objects.ipynb
+++ b/_notebooks/java_objects.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Java Objects demonstration\n",
+    "# Java Objects Demonstration\n",
     "> Proof of understanding of objects\n",
     "\n",
     "- toc: true \n",
