--- a/_notebooks/code_org.ipynb
+++ b/_notebooks/code_org.ipynb
@@ -8,7 +8,7 @@
     "> Learning of object oriented programming\n",
     "\n",
     "- toc: true \n",
-    "- badges: true\n",
+    "- badges: false\n",
     "- comments: true\n",
     "- categories: [jupyter]\n"
    ]
