--- a/_notebooks/java_objects.ipynb
+++ b/_notebooks/java_objects.ipynb
@@ -121,6 +121,30 @@
     "    }\n",
     "}"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hacks\n",
+    "Explain where a Class is defined\n",
+    "\n",
+    "    A class is defined where you need variables, objects, or methods to be added to your code\n",
+    "\n",
+    "Explain where an instances of a Class is defined\n",
+    "    An instance is defined in a Class as an object.\n",
+    "Explain where an object is Calling a Method\n",
+    "    An object can call a method when the action is needed to be used for the code to go through. \n",
+    "Explain where an object is Mutating data\n",
+    "    An object is mutation data when there is a change in the original data.\n",
+    "Describe Console, GUI differences, or Code.org differences.\n",
+    "    A console is where the user input and gets outputs.\n",
+    "    Ex: Bash shell\n",
+    "\n",
+    "    A GUI is more clickable and user-friendly. There is also visual feedback and display.\n",
+    "\n",
+    "    Code.org used a painter as the visual object which shows the user what the code is doing. It has a public class as \"MyNeighborhood\". To call a method, you put \"variableName.methodName();\"."
+   ]
   }
  ],
  "metadata": {
