--- a/_notebooks/java_objects.ipynb
+++ b/_notebooks/java_objects.ipynb
@@ -24,11 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "ename": "CompilationException",
@@ -127,23 +123,27 @@
    "metadata": {},
    "source": [
     "## Hacks\n",
-    "Explain where a Class is defined\n",
     "\n",
-    "    A class is defined where you need variables, objects, or methods to be added to your code\n",
+    "Explain where a Class is defined\n",
+    "* A class is defined where you need variables, objects, or methods to be added to your code\n",
     "\n",
     "Explain where an instances of a Class is defined\n",
-    "    An instance is defined in a Class as an object.\n",
+    "* An instance is defined in a Class as an object.\n",
+    "\n",
     "Explain where an object is Calling a Method\n",
-    "    An object can call a method when the action is needed to be used for the code to go through. \n",
+    "* An object can call a method when the action is needed to be used for the code to go through. \n",
+    "\n",
     "Explain where an object is Mutating data\n",
-    "    An object is mutation data when there is a change in the original data.\n",
+    "* An object is mutation data when there is a change in the original data.\n",
+    "\n",
     "Describe Console, GUI differences, or Code.org differences.\n",
-    "    A console is where the user input and gets outputs.\n",
-    "    Ex: Bash shell\n",
     "\n",
-    "    A GUI is more clickable and user-friendly. There is also visual feedback and display.\n",
+    "* A console is where the user input and gets outputs.\n",
+    "* Ex: Bash shell\n",
     "\n",
-    "    Code.org used a painter as the visual object which shows the user what the code is doing. It has a public class as \"MyNeighborhood\". To call a method, you put \"variableName.methodName();\"."
+    "* A GUI is more clickable and user-friendly. There is also visual feedback and display.\n",
+    "\n",
+    "* Code.org used a painter as the visual object which shows the user what the code is doing. It has a public class as \"MyNeighborhood\". To call a method, you put \"variableName.methodName();\"."
    ]
   }
  ],
@@ -157,7 +157,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "Java",
+   "name": "java",
    "pygments_lexer": "java",
    "version": "11.0.16+8-post-Ubuntu-0ubuntu120.04"
   },
