--- a/_posts/2022-09-06-code-org.md
+++ b/_posts/2022-09-06-code-org.md
@@ -1,10 +1,10 @@
 ---
-- toc: true 
-- layout: post
-- description: Learning of object oriented programming 
-- comments: true
-- categories: [markdown]
-- title: Code.org OOP
+toc: true 
+layout: post
+description: Learning of object oriented programming 
+comments: true
+categories: [markdown]
+title: Code.org OOP
 ---
 
 # Code.org OOP
