--- a/_posts/2022-09-06-code-org.md
+++ b/_posts/2022-09-06-code-org.md
@@ -10,7 +10,7 @@ title: Code.org OOP
 # Code.org OOP
 
 ## Proof of completion
-![Code.org](code.org2_pic.png)
+![]code.org2_pic.png)
 
 ## Classes and Objects
 
