--- a/_notebooks/iteration_2Darray.ipynb
+++ b/_notebooks/iteration_2Darray.ipynb
@@ -14,8 +14,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -23,56 +28,12 @@
    },
    "outputs": [
     {
-     "ename": "UnresolvedReferenceException",
-     "evalue": "Attempt to use definition snippet with unresolved references in Snippet:ClassKey(CarLoop)#15-class CarLoop {\n    String [][] car;\n\n    public CarLoop() {\n        car = new String[][]{\n           {\n                \"  ______                                                       \",\n                \" /|_||_\\\\`.__                                                  \",\n                \"(   _    _ _\\\\                                                 \",\n                \"=`-(_)--(_)-'                                                  \",\n                \"===============================================================\"\n           },\n           {\n                \"            ______                                             \",\n                \"           /|_||_\\\\`.__                                        \",\n                \"          (   _    _ _\\\\                                       \",\n                \"          =`-(_)--(_)-'                                        \",\n                \"===============================================================\"            \n           },\n        };\n    }\n\n    public void printRace() {\n        System.out.println();\n        System.out.println(\"Car drivng down in Java Loop\");\n\n        int carPlace = car.length;\n        for (int i = carPlace; i >= 1; i--)\n        {\n            for (int row = 0; row < carPlace; row++) {\n                for (int col = 0; col < car[row].length; col++) {\n                    System.out.print(car[row][col] + \" \");\n\n                }\n            }\n\n            carPlace -= 1;\n        }\n    }\n\n    public static void main(String[] args) {\n        new CarLoop().printPoem();\n    }\n}",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30mclass CarLoop {\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m    String [][] car;\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m    public CarLoop() {\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m        car = new String[][]{\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m           {\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m                \"  ______                                                       \",\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m                \" /|_||_\\\\`.__                                                  \",\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m                \"(   _    _ _\\\\                                                 \",\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m                \"=`-(_)--(_)-'                                                  \",\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m                \"===============================================================\"\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m           },\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m           {\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m                \"            ______                                             \",\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m                \"           /|_||_\\\\`.__                                        \",\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m                \"          (   _    _ _\\\\                                       \",\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m                \"          =`-(_)--(_)-'                                        \",\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m                \"===============================================================\"            \u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m           },\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m        };\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m    }\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m    public void printRace() {\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m        System.out.println();\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m        System.out.println(\"Car drivng down in Java Loop\");\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m        int carPlace = car.length;\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m        for (int i = carPlace; i >= 1; i--)\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m        {\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m            for (int row = 0; row < carPlace; row++) {\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m                for (int col = 0; col < car[row].length; col++) {\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m                    System.out.print(car[row][col] + \" \");\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m                }\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m            }\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m            carPlace -= 1;\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m        }\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m    }\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m    public static void main(String[] args) {\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m        new CarLoop().printPoem();\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m    }\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m}\u001b[0m",
-      "\u001b[1m\u001b[31mUnresolved dependencies:\u001b[0m",
-      "\u001b[1m\u001b[31m   - method printPoem()\u001b[0m"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Car drivng down in Java Loop\n",
+      "  ______                                                         /|_||_\\`.__                                                   (   _    _ _\\                                                  =`-(_)--(_)-'                                                   ===============================================================             ______                                                         /|_||_\\`.__                                                   (   _    _ _\\                                                  =`-(_)--(_)-'                                         ===============================================================   ______                                                         /|_||_\\`.__                                                   (   _    _ _\\                                                  =`-(_)--(_)-'                                                   =============================================================== "
      ]
     }
    ],
@@ -118,7 +79,7 @@
     "    }\n",
     "\n",
     "    public static void main(String[] args) {\n",
-    "        new CarLoop().printPoem();\n",
+    "        new CarLoop().printRace();\n",
     "    }\n",
     "}\n",
     "\n",
