--- a/_notebooks/java_primitives.ipynb
+++ b/_notebooks/java_primitives.ipynb
@@ -35,17 +35,17 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Java",
-   "language": "java",
-   "name": "java"
+   "display_name": "Python 3.9.12 ('base')",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "java",
+   "name": "python",
    "pygments_lexer": "java",
-   "version": "11.0.16+8-post-Ubuntu-0ubuntu120.04"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
