--- a/_notebooks/iteration_2Darray.ipynb
+++ b/_notebooks/iteration_2Darray.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -33,7 +33,86 @@
      "text": [
       "\n",
       "Car drivng down in Java Loop\n",
-      "  ______                                                         /|_||_\\`.__                                                   (   _    _ _\\                                                  =`-(_)--(_)-'                                                   ===============================================================             ______                                                         /|_||_\\`.__                                                   (   _    _ _\\                                                  =`-(_)--(_)-'                                         ===============================================================   ______                                                         /|_||_\\`.__                                                   (   _    _ _\\                                                  =`-(_)--(_)-'                                                   =============================================================== "
+      "  ______                                                        \n",
+      " /|_||_\\`.__                                                   \n",
+      "(   _    _ _\\                                                  \n",
+      "=`-(_)--(_)-'                                                   \n",
+      "=============================================================== \n",
+      "                  ______                                        \n",
+      "                 /|_||_\\`.__                                   \n",
+      "                (   _    _ _\\                                  \n",
+      "                =`-(_)--(_)-'                                   \n",
+      "=============================================================== \n",
+      "                             ______                             \n",
+      "                            /|_||_\\`.__                        \n",
+      "                           (   _    _ _\\                       \n",
+      "                           =`-(_)--(_)-'                        \n",
+      "=============================================================== \n",
+      "                                                 ______         \n",
+      "                                                /|_||_\\`.__    \n",
+      "                                               (   _    _ _\\   \n",
+      "                                               =`-(_)--(_)-'    \n",
+      "=============================================================== \n",
+      "  ______                                                        \n",
+      " /|_||_\\`.__                                                   \n",
+      "(   _    _ _\\                                                  \n",
+      "=`-(_)--(_)-'                                                   \n",
+      "=============================================================== \n",
+      "                  ______                                        \n",
+      "                 /|_||_\\`.__                                   \n",
+      "                (   _    _ _\\                                  \n",
+      "                =`-(_)--(_)-'                                   \n",
+      "=============================================================== \n",
+      "                             ______                             \n",
+      "                            /|_||_\\`.__                        \n",
+      "                           (   _    _ _\\                       \n",
+      "                           =`-(_)--(_)-'                        \n",
+      "=============================================================== \n",
+      "                                                 ______         \n",
+      "                                                /|_||_\\`.__    \n",
+      "                                               (   _    _ _\\   \n",
+      "                                               =`-(_)--(_)-'    \n",
+      "=============================================================== \n",
+      "  ______                                                        \n",
+      " /|_||_\\`.__                                                   \n",
+      "(   _    _ _\\                                                  \n",
+      "=`-(_)--(_)-'                                                   \n",
+      "=============================================================== \n",
+      "                  ______                                        \n",
+      "                 /|_||_\\`.__                                   \n",
+      "                (   _    _ _\\                                  \n",
+      "                =`-(_)--(_)-'                                   \n",
+      "=============================================================== \n",
+      "                             ______                             \n",
+      "                            /|_||_\\`.__                        \n",
+      "                           (   _    _ _\\                       \n",
+      "                           =`-(_)--(_)-'                        \n",
+      "=============================================================== \n",
+      "                                                 ______         \n",
+      "                                                /|_||_\\`.__    \n",
+      "                                               (   _    _ _\\   \n",
+      "                                               =`-(_)--(_)-'    \n",
+      "=============================================================== \n",
+      "  ______                                                        \n",
+      " /|_||_\\`.__                                                   \n",
+      "(   _    _ _\\                                                  \n",
+      "=`-(_)--(_)-'                                                   \n",
+      "=============================================================== \n",
+      "                  ______                                        \n",
+      "                 /|_||_\\`.__                                   \n",
+      "                (   _    _ _\\                                  \n",
+      "                =`-(_)--(_)-'                                   \n",
+      "=============================================================== \n",
+      "                             ______                             \n",
+      "                            /|_||_\\`.__                        \n",
+      "                           (   _    _ _\\                       \n",
+      "                           =`-(_)--(_)-'                        \n",
+      "=============================================================== \n",
+      "                                                 ______         \n",
+      "                                                /|_||_\\`.__    \n",
+      "                                               (   _    _ _\\   \n",
+      "                                               =`-(_)--(_)-'    \n",
+      "=============================================================== \n"
      ]
     }
    ],
@@ -51,12 +130,26 @@
     "                \"===============================================================\"\n",
     "           },\n",
     "           {\n",
-    "                \"            ______                                             \",\n",
-    "                \"           /|_||_\\\\`.__                                        \",\n",
-    "                \"          (   _    _ _\\\\                                       \",\n",
-    "                \"          =`-(_)--(_)-'                                        \",\n",
+    "                \"                  ______                                       \",\n",
+    "                \"                 /|_||_\\\\`.__                                  \",\n",
+    "                \"                (   _    _ _\\\\                                 \",\n",
+    "                \"                =`-(_)--(_)-'                                  \",\n",
     "                \"===============================================================\"            \n",
     "           },\n",
+    "           {\n",
+    "                \"                             ______                            \",\n",
+    "                \"                            /|_||_\\\\`.__                       \",\n",
+    "                \"                           (   _    _ _\\\\                      \",\n",
+    "                \"                           =`-(_)--(_)-'                       \",\n",
+    "                \"===============================================================\"            \n",
+    "            },\n",
+    "            {\n",
+    "                \"                                                 ______        \",\n",
+    "                \"                                                /|_||_\\\\`.__   \",\n",
+    "                \"                                               (   _    _ _\\\\  \",\n",
+    "                \"                                               =`-(_)--(_)-'   \",\n",
+    "                \"===============================================================\"            \n",
+    "            },\n",
     "        };\n",
     "    }\n",
     "\n",
@@ -64,17 +157,17 @@
     "        System.out.println();\n",
     "        System.out.println(\"Car drivng down in Java Loop\");\n",
     "\n",
-    "        int carPlace = car.length;\n",
+    "        int carPlace = 4;\n",
     "        for (int i = carPlace; i >= 1; i--)\n",
     "        {\n",
     "            for (int row = 0; row < carPlace; row++) {\n",
     "                for (int col = 0; col < car[row].length; col++) {\n",
-    "                    System.out.print(car[row][col] + \" \");\n",
+    "                    System.out.println(car[row][col] + \" \");\n",
     "\n",
     "                }\n",
     "            }\n",
     "\n",
-    "            carPlace -= 1;\n",
+    "            \n",
     "        }\n",
     "    }\n",
     "\n",
