--- a/_notebooks/iteration_2Darray.ipynb
+++ b/_notebooks/iteration_2Darray.ipynb
@@ -15,82 +15,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "java"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Car drivng down in Java Loop\n",
-      "                                                                \n",
-      "  ______                                                        \n",
-      " /|_||_\\`.__                                                   \n",
-      "(   _    _ _\\                                                  \n",
-      "=`-(_)--(_)-'                                                   \n",
-      "=============================================================== \n",
-      "                                                                \n",
-      "                 _/\\______\\__                               \n",
-      "                /  -. -|-  ,-.`-.                            \n",
-      "                `( o )----( o )-'                            \n",
-      "                  `-'      `-'                               \n",
-      "=============================================================== \n",
-      "                          _________________________          \n",
-      "                         |   |     |     |    | |  \\         \n",
-      "                         |___|_____|_____|____|_|___\\        \n",
-      "                         |                    | |    \\       \n",
-      "                         `--(o)(o)--------------(o)--'        \n",
-      "=============================================================== \n",
-      "                                                              \n",
-      "                                           _____________      \n",
-      "                                          ||______][__ \\\\____  \n",
-      "                                          |o   _   |-  | _ o) \n",
-      "                                          '---(_)-------(_) ' \n",
-      "=============================================================== \n",
-      "                                                                \n",
-      "  ______                                                        \n",
-      " /|_||_\\`.__                                                   \n",
-      "(   _    _ _\\                                                  \n",
-      "=`-(_)--(_)-'                                                   \n",
-      "=============================================================== \n",
-      "                                                                \n",
-      "                 _/\\______\\__                               \n",
-      "                /  -. -|-  ,-.`-.                            \n",
-      "                `( o )----( o )-'                            \n",
-      "                  `-'      `-'                               \n",
-      "=============================================================== \n",
-      "                          _________________________          \n",
-      "                         |   |     |     |    | |  \\         \n",
-      "                         |___|_____|_____|____|_|___\\        \n",
-      "                         |                    | |    \\       \n",
-      "                         `--(o)(o)--------------(o)--'        \n",
-      "=============================================================== \n",
-      "                                                                \n",
-      "  ______                                                        \n",
-      " /|_||_\\`.__                                                   \n",
-      "(   _    _ _\\                                                  \n",
-      "=`-(_)--(_)-'                                                   \n",
-      "=============================================================== \n",
-      "                                                                \n",
-      "                 _/\\______\\__                               \n",
-      "                /  -. -|-  ,-.`-.                            \n",
-      "                `( o )----( o )-'                            \n",
-      "                  `-'      `-'                               \n",
-      "=============================================================== \n",
-      "                                                                \n",
-      "  ______                                                        \n",
-      " /|_||_\\`.__                                                   \n",
-      "(   _    _ _\\                                                  \n",
-      "=`-(_)--(_)-'                                                   \n",
-      "=============================================================== \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class CarLoop {\n",
     "    String [][] car;\n",
@@ -139,6 +70,9 @@
     "        int carPlace = 4;\n",
     "        for (int i = carPlace; i >= 1; i--)\n",
     "        {\n",
+    "\n",
+    "            System.out.println(i + \" cars left in the race\");\n",
+    "\n",
     "            for (int row = 0; row < carPlace; row++) {\n",
     "                for (int col = 0; col < car[row].length; col++) {\n",
     "                    System.out.println(car[row][col] + \" \");\n",
@@ -156,6 +90,31 @@
     "}\n",
     "\n",
     "CarLoop.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hacks\n",
+    "\n",
+    "Build you own Jupyter Notebook. Feel free to use any ASCII art of your choice, there are some much better ones here. My little guys were made up out of my head while looking at unicode characters.\n",
+    "\n",
+    "* Print monkeys horizontally versus vertically.\n",
+    "* Build more or entire rhyme for the \"Monkey Jumpers\" countdown poem\n",
+    "* Add names or other properties to the monkeys\n",
+    "\n",
+    "In you notebook, illustrate or answer some of these questions.\n",
+    "\n",
+    "Is this program in more of an Imperative Programming Style or OOP style? Explain.\n",
+    "Observe variable assignments.\n",
+    "* Is each Monkey an object?\n",
+    "Build an where the monkey is an object versus two-dimensional array. \n",
+    "This would be leading into Unit 5 requirements.\n",
+    "\n",
+    "* Study loops and zero based counting\n",
+    "Study two-dimensional (2D) array references\n",
+    "Explain different way you can access a 2D array"
    ]
   }
  ],
