--- a/_notebooks/frq1_2019.ipynb
+++ b/_notebooks/frq1_2019.ipynb
@@ -45,6 +45,9 @@
     "        }\n",
     "    }\n",
     "\n",
+    "In this problem I created a loop so that it would go through all the years that are in between year1 and year2. Then inside of that I put a if statement to decide if there was a leap year. If yes, count would be increased by 1. \n",
+    "\n",
+    "\n",
     "\n",
     "(b) Write the static method dayOfWeek, which returns the integer value representing the day of the week for\n",
     "the given date (month, day, year), where 0 denotes Sunday, 1 denotes Monday, ..., and 6\n",
@@ -82,7 +85,9 @@
     "        int firstDay = firstDayOfYear(year);\n",
     "        int day = dayOfYear(month, day, year);\n",
     "        return (firstDay + day - 1) % 7;\n",
-    "    }"
+    "    }\n",
+    "\n",
+    "For this, I created two variables and set them to the firstDayOfYear and dayOfYear. After that, I added the two values together and subtracted 1. The % 7 is what the remainder is."
    ]
   }
  ],
@@ -96,7 +101,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "Java",
+   "name": "java",
    "pygments_lexer": "java",
    "version": "11.0.16+8-post-Ubuntu-0ubuntu120.04"
   },
