--- a/_notebooks/2022-08-22-bash_checks.ipynb
+++ b/_notebooks/2022-08-22-bash_checks.ipynb
@@ -18,11 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "shellscript"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "python --version\n"
@@ -31,9 +27,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Bash",
-   "language": "bash",
-   "name": "bash"
+   "display_name": "JavaScript (Node.js)",
+   "language": "javascript",
+   "name": "javascript"
   },
   "language_info": {
    "codemirror_mode": {
@@ -42,7 +38,7 @@
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "bash",
+   "name": "javascript",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.12"
