add photo to array title

--- a/_notebooks/2022-09-28-arrays_images.ipynb
+++ b/_notebooks/2022-09-28-arrays_images.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -28,8 +28,8 @@
      "text": [
       "javax.imageio.IIOException: Can't read input file!\n",
       "\tat java.desktop/javax.imageio.ImageIO.read(ImageIO.java:1308)\n",
-      "\tat REPL.$JShell$16B$imageDemo.main($JShell$16B.java:46)\n",
-      "\tat REPL.$JShell$38.do_it$($JShell$38.java:35)\n",
+      "\tat REPL.$JShell$16C$imageDemo.main($JShell$16C.java:46)\n",
+      "\tat REPL.$JShell$59.do_it$($JShell$59.java:35)\n",
       "\tat java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)\n",
       "\tat java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)\n",
       "\tat java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)\n",
@@ -59,7 +59,7 @@
     "    public static void main( String[] args ){\n",
     "        BufferedImage img = null;  // buffer type \n",
     "         try {\n",
-    "            String name = \"Pepsi\";\n",
+    "            String name = \"pepsi-logo\";\n",
     "            String in = \"images/\";\n",
     "            String out = \"images/tmp/\";\n",
     "\n",
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -107,7 +107,7 @@
       "\u001b[1m\u001b[31mjava.lang.NullPointerException: null\u001b[0m",
       "\u001b[1m\u001b[31m\tat Pics.convertToAscii(#34:1)\u001b[0m",
       "\u001b[1m\u001b[31m\tat Pics.main(#34:1)\u001b[0m",
-      "\u001b[1m\u001b[31m\tat .(#49:1)\u001b[0m"
+      "\u001b[1m\u001b[31m\tat .(#56:1)\u001b[0m"
      ]
     }
    ],
