--- a/_notebooks/2022-09-28-arrays_images.ipynb
+++ b/_notebooks/2022-09-28-arrays_images.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -29,7 +29,7 @@
       "javax.imageio.IIOException: Can't read input file!\n",
       "\tat java.desktop/javax.imageio.ImageIO.read(ImageIO.java:1308)\n",
       "\tat REPL.$JShell$16C$imageDemo.main($JShell$16C.java:46)\n",
-      "\tat REPL.$JShell$59.do_it$($JShell$59.java:35)\n",
+      "\tat REPL.$JShell$50.do_it$($JShell$50.java:35)\n",
       "\tat java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)\n",
       "\tat java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)\n",
       "\tat java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)\n",
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -93,21 +93,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original: 0 0x0  images/Pepsi.png\n",
-      "Scaled: 0 0x0  images/Pepsi.png\n",
-      "ASCII out file create error: java.io.FileNotFoundException: images/tmp/Pepsi.txt (No such file or directory)\n"
-     ]
-    },
-    {
-     "ename": "EvalException",
-     "evalue": "null",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1m\u001b[31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1m\u001b[31mjava.lang.NullPointerException: null\u001b[0m",
-      "\u001b[1m\u001b[31m\tat Pics.convertToAscii(#34:1)\u001b[0m",
-      "\u001b[1m\u001b[31m\tat Pics.main(#34:1)\u001b[0m",
-      "\u001b[1m\u001b[31m\tat .(#56:1)\u001b[0m"
+      "Original: 21235 300x300  images/Pepsi.png\n",
+      "Scaled: 3281 75x75  images/tmp/Pepsi.png\n"
      ]
     }
    ],
@@ -241,7 +228,7 @@
     "        } catch (IOException e) {\n",
     "        }\n",
     "\n",
-    "        for (int i = 0; i < img.getHeight(); i++) {\n",
+    "        for (int i = 0; i < img.getHeight(); i+=3) {\n",
     "            for (int j = 0; j < img.getWidth(); j++) {\n",
     "                Color col = new Color(img.getRGB(j, i));\n",
     "                double pixVal = (((col.getRed() * 0.30) + (col.getBlue() * 0.59) + (col\n",
@@ -291,7 +278,7 @@
     "    public static void main(String[] args) throws IOException {\n",
     "        Pics Pepsi = new Pics(\"Pepsi\", \"png\");\n",
     "        Pepsi.printStats(\"Original\");\n",
-    "        Pepsi.resize(33);\n",
+    "        Pepsi.resize(25);\n",
     "        Pepsi.printStats(\"Scaled\");\n",
     "        Pepsi.convertToAscii();\n",
     "        \n",
@@ -315,7 +302,12 @@
    "pygments_lexer": "java",
    "version": "11.0.16+8-post-Ubuntu-0ubuntu120.04"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "e55666fbbf217aa3df372b978577f47b6009e2f78e2ec76a584f49cd54a1e62c"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
