--- a/_notebooks/2022-09-28-arrays_images.ipynb
+++ b/_notebooks/2022-09-28-arrays_images.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -24,8 +24,8 @@
      "text": [
       "javax.imageio.IIOException: Can't read input file!\n",
       "\tat java.desktop/javax.imageio.ImageIO.read(ImageIO.java:1308)\n",
-      "\tat REPL.$JShell$16C$imageDemo.main($JShell$16C.java:46)\n",
-      "\tat REPL.$JShell$50.do_it$($JShell$50.java:35)\n",
+      "\tat REPL.$JShell$16$imageDemo.main($JShell$16.java:30)\n",
+      "\tat REPL.$JShell$17.do_it$($JShell$17.java:19)\n",
       "\tat java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)\n",
       "\tat java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)\n",
       "\tat java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)\n",
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
