--- a/_notebooks/2022-09-26-java_script.ipynb
+++ b/_notebooks/2022-09-26-java_script.ipynb
@@ -160,14 +160,14 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "JavaScript (Node.js)",
-   "language": "javascript",
-   "name": "javascript"
+   "display_name": "Java",
+   "language": "java",
+   "name": "java"
   },
   "language_info": {
    "file_extension": ".js",
    "mimetype": "application/javascript",
-   "name": "javascript",
+   "name": "java",
    "version": "6.11.2"
   },
   "orig_nbformat": 4
