--- a/_notebooks/2022-10-07-array_list.ipynb
+++ b/_notebooks/2022-10-07-array_list.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -26,16 +26,30 @@
      "output_type": "stream",
      "text": [
       "[Football, Basketball, Soccer, Baseball, Tennis]\n",
+      " \n",
       "Football\n",
       "Basketball\n",
       "Soccer\n",
       "Baseball\n",
-      "Tennis\n"
+      "Tennis\n",
+      " \n",
+      "The size of the array is 5\n",
+      "The 3 array has been changed to Golf\n",
+      " \n",
+      "The array list is in alphabetical order:\n",
+      "Basketball\n",
+      "Football\n",
+      "Golf\n",
+      "Soccer\n",
+      "Tennis\n",
+      " \n",
+      "The array list is now empty and says:[]\n"
      ]
     }
    ],
    "source": [
     "import java.util.ArrayList;\n",
+    "import java.util.Collections;\n",
     "\n",
     "public class Main {\n",
     "    public static void main() {\n",
@@ -46,14 +60,34 @@
     "        sports.add(\"Baseball\");\n",
     "        sports.add(\"Tennis\");\n",
     "        System.out.println(sports);\n",
+    "\n",
+    "        System.out.println(\" \");\n",
+    "\n",
     "        for (int i = 0; i < 5; i++) {\n",
     "            System.out.println(sports.get(i));\n",
     "        }\n",
-    "    } \n",
+    "\n",
+    "        System.out.println(\" \");\n",
+    "        System.out.println(\"The size of the array is \" + sports.size());\n",
+    "\n",
+    "        sports.set(3, \"Golf\");\n",
+    "        System.out.println(\"The 3 array has been changed to \" + sports.get(3));\n",
+    "\n",
+    "        System.out.println(\" \");\n",
+    "\n",
+    "        Collections.sort(sports);\n",
+    "        System.out.println(\"The array list is in alphabetical order:\");\n",
+    "        for (String i : sports) {\n",
+    "        System.out.println(i);\n",
+    "        }\n",
+    "\n",
+    "        System.out.println(\" \");\n",
+    "        sports.clear();\n",
+    "        System.out.println(\"The array list is now empty and says:\" + sports);\n",
+    "    }\n",
     "}\n",
     "\n",
-    "Main.main();\n",
-    "\n"
+    "Main.main();"
    ]
   }
  ],
