--- a/_notebooks/2022-10-07-array_list.ipynb
+++ b/_notebooks/2022-10-07-array_list.ipynb
@@ -13,6 +13,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Arrays can be configured through .add, .get, .set, .sort, .clear, and more methods. The .add method adds an index to the array list and the .get calls the specific index number. The .set method sets the index to a new index. The .sort method sorts the indexes in a certain order and .clear will clear all the indexes in the array."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
@@ -53,36 +60,36 @@
     "\n",
     "public class Main {\n",
     "    public static void main() {\n",
-    "        ArrayList<String> sports = new ArrayList<String>();\n",
+    "        ArrayList<String> sports = new ArrayList<String>(); //Creates a new array\n",
     "        sports.add(\"Football\");\n",
-    "        sports.add(\"Basketball\");\n",
+    "        sports.add(\"Basketball\"); //adds different sports to the array\n",
     "        sports.add(\"Soccer\");\n",
     "        sports.add(\"Baseball\");\n",
     "        sports.add(\"Tennis\");\n",
-    "        System.out.println(sports);\n",
+    "        System.out.println(sports); // prints the array\n",
     "\n",
     "        System.out.println(\" \");\n",
     "\n",
     "        for (int i = 0; i < 5; i++) {\n",
-    "            System.out.println(sports.get(i));\n",
+    "            System.out.println(sports.get(i)); // prints each array separately\n",
     "        }\n",
     "\n",
     "        System.out.println(\" \");\n",
-    "        System.out.println(\"The size of the array is \" + sports.size());\n",
+    "        System.out.println(\"The size of the array is \" + sports.size()); //prints the size of the array\n",
     "\n",
-    "        sports.set(3, \"Golf\");\n",
+    "        sports.set(3, \"Golf\"); // changes the 3 array to \"Golf\"\n",
     "        System.out.println(\"The 3 array has been changed to \" + sports.get(3));\n",
     "\n",
     "        System.out.println(\" \");\n",
     "\n",
-    "        Collections.sort(sports);\n",
+    "        Collections.sort(sports); //sorts the array in alphabetical order\n",
     "        System.out.println(\"The array list is in alphabetical order:\");\n",
     "        for (String i : sports) {\n",
     "        System.out.println(i);\n",
     "        }\n",
     "\n",
     "        System.out.println(\" \");\n",
-    "        sports.clear();\n",
+    "        sports.clear(); //clears the array\n",
     "        System.out.println(\"The array list is now empty and says:\" + sports);\n",
     "    }\n",
     "}\n",
