--- a/_notebooks/2022-10-6-pojo.ipynb
+++ b/_notebooks/2022-10-6-pojo.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Array List\n",
+    "# POJO and API\n",
     "\n",
     "- toc: true \n",
     "- badges: true\n",
