java prims lesson

--- a/_notebooks/2022-10-6-pojo.ipynb
+++ b/_notebooks/2022-10-6-pojo.ipynb
@@ -14,12 +14,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [
     {
      "ename": "CompilationException",
@@ -42,10 +38,9 @@
     "@Data  // Annotations to simplify writing code (ie constructors, setters)\n",
     "@NoArgsConstructor\n",
     "@AllArgsConstructor\n",
-    "@Entity // Annotation to simplify creating an entity, which is a lightweight persistence domain object. Typically, an entity represents a table in a relational database, and each entity instance corresponds to a row in that table.\n",
+    " // Annotation to simplify creating an entity, which is a lightweight persistence domain object. Typically, an entity represents a table in a relational database, and each entity instance corresponds to a row in that table.\n",
     "public class Jokes {\n",
-    "    @Id\n",
-    "    @GeneratedValue(strategy = GenerationType.AUTO)\n",
+    "    \n",
     "    private Long id;  // Unique identifier\n",
     "\n",
     "    @Column(unique=true)\n",
@@ -67,7 +62,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "Java",
+   "name": "java",
    "pygments_lexer": "java",
    "version": "11.0.16+8-post-Ubuntu-0ubuntu120.04"
   },
