--- a/_notebooks/2022-10-13-recursion-lesson.ipynb
+++ b/_notebooks/2022-10-13-recursion-lesson.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Java Primitives Demonstration\n",
-    "> A demonstration of java primitives\n",
+    "# Recursion Lesson\n",
     "\n",
     "- toc: true \n",
     "- badges: true\n",
@@ -21,19 +20,18 @@
      "languageId": "java"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The integer is 10 and the boolean is false\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "int b = 10;\n",
-    "boolean c = false;\n",
-    "System.out.println(\"The integer is \" + b + \" and the boolean is \" + c)"
+    "public class RecursionExample1 {  \n",
+    "    static void recursion() {  \n",
+    "        System.out.println(\"hello\");  \n",
+    "        recursion();  \n",
+    "    }  \n",
+    "  \n",
+    "    public static void main(String[] args) {  \n",
+    "        recursion();  \n",
+    "    }  \n",
+    "}  "
    ]
   }
  ],
@@ -51,12 +49,7 @@
    "pygments_lexer": "java",
    "version": "11.0.16+8-post-Ubuntu-0ubuntu120.04"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "3580184b020661fc9479b01237039c68aa9914687cbad07e8d65d9596016fd77"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
