--- a/_notebooks/2022-09-20-frq1_2019.ipynb
+++ b/_notebooks/2022-09-20-frq1_2019.ipynb
@@ -89,6 +89,14 @@
     "\n",
     "For this, I created two variables and set them to the firstDayOfYear and dayOfYear. After that, I added the two values together and subtracted 1. The % 7 is what the remainder is."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Quizzez\n",
+    "![](quizzez.png)"
+   ]
   }
  ],
  "metadata": {
