--- a/_notebooks/2022-10-23-boolean-ifstatements.ipynb
+++ b/_notebooks/2022-10-23-boolean-ifstatements.ipynb
@@ -94,8 +94,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Quizzez\n",
-    "![](quizzez.png)"
+    "## Quizzez\n"
    ]
   }
  ],
