python clock and part of blog

--- a/_notebooks/2022-08-22-notes.ipynb
+++ b/_notebooks/2022-08-22-notes.ipynb
@@ -25,12 +25,12 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
-   "language": "python",
-   "name": "python3"
+   "display_name": "Java",
+   "language": "java",
+   "name": "java"
   },
   "language_info": {
-   "name": "python",
+   "name": "java",
    "version": "3.8.10"
   },
   "orig_nbformat": 4,
