--- a/_notebooks/2022-11-7-incremation.ipynb
+++ b/_notebooks/2022-11-7-incremation.ipynb
@@ -2,14 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (4256304337.py, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Input \u001b[0;32mIn [22]\u001b[0;36m\u001b[0m\n\u001b[0;31m    global run  ugiug\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Seconds: 3\n"
+      "Seconds: 131\n"
      ]
     }
    ],
@@ -18,13 +26,13 @@
     "\n",
     "def keepUpdating(): # build a function to run over and over\n",
     "# global variable setup\n",
-    "    global run  \n",
-    "try: run\n",
-    "except: run = 0\n",
+    "    global run\n",
+    "    try: run\n",
+    "    except: run = 0\n",
     "\n",
-    "print(\"Seconds:\", run)  # replace this line with updates to data\n",
-    "run += 3  # this is update to global variable\n",
-    "threading.Timer(3.0, keepUpdating).start()\n",
+    "    print(\"Seconds:\", run)  # replace this line with updates to data\n",
+    "    run += 1  # this is update to global variable\n",
+    "    threading.Timer(3.0, keepUpdating).start()\n",
     "\n",
     "keepUpdating() "
    ]
